feat: implementa possibilidade de adição de indefinidos responsáveis pelo estabelecimento

--- a/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
+++ b/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
@@ -53,30 +53,6 @@
 			</div>
 			<div class="panel-body">
 				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="responsavel">Responsável</label>
-						<input type="zoom" id="responsavel" name="responsavel" 
-							data-zoom="{
-							'displayKey':'colleagueName',
-							'datasetId':'colleague',
-							'placeholder':'Escolha o responsável',
-							'fields':[
-								{
-									'field':'colleagueId',
-									'label':'ID'
-								},
-								{
-									'field':'colleagueName',
-									'label':'Nome',
-									'standart':'true'
-								},
-								{
-									'field':'login',
-									'label':'Login'
-								}	
-							]
-						}">
-					</div>
 					<div class="from-group col-md-2">
 						<label for="tipoPonto">Tipo do Ponto</label>
 						<div class="radio">
@@ -88,7 +64,7 @@
 		
 				<div class="row">
 					<div class="from-group col-md-4">
-						<label for="diaFuncionamento">Dias de Funcionamento</label>
+						<label for="diaFuncionamento">Dias de Funcionamento</label>	
 						<div class="checkbox">
 							<label><input type="checkbox" name="segunda">Seg</label>
 							<label><input type="checkbox" name="terca">Ter</label>
@@ -154,6 +130,48 @@
 						<textarea class="form-control" label="informacoes" name="informacoes"></textarea>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title"> <i class="fluigicon fluigicon-users fluigicon-md" aria-hidden="true"></i> Responsáveis</h3>
+			</div>
+			<div class="panel-body">
+				<table tablename="responsaveisTabela" class="table table-hover" addButtonLabel="Novo Responsável" addButtonClass="btn btn-info">
+					<thead>
+						<tr>
+							<td>Responsáveis</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								<input type="zoom" id="responsavel" name="responsavel" 
+									data-zoom="{
+									'displayKey':'colleagueName',
+									'datasetId':'colleague',
+									'placeholder':'Escolha o responsável',
+									'fields':[
+										{
+											'field':'colleagueId',
+											'label':'ID'
+										},
+										{
+											'field':'colleagueName',
+											'label':'Nome',
+											'standart':'true'
+										},
+										{
+											'field':'login',
+											'label':'Login'
+										}	
+									]
+								}">
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 
