feat: Adiciona campo Moeda (select) ao formulário

--- a/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
+++ b/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
@@ -120,6 +120,14 @@
 			<div class="panel-body">
 				<div class="row">
 					<div class="form-group col-md-6">
+						<label for="moeda">Moeda</label>
+						<select class="form-control" id="moeda" type="number" name="moeda" placeholder="valor">
+							<option value="real">Real</option>
+							<option value="Dólar Americano">Dólar Americano</option>
+							<option value="Peso Uruguaio">Peso Uruguaio</option>
+						</select>
+					</div>
+					<div class="form-group col-md-6">
 						<label for="valor">Valor</label>
 						<input class="form-control" id="valor" type="number" name="valor" placeholder="valor">
 					</div>
