--- a/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
+++ b/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
@@ -121,11 +121,7 @@
 				<div class="row">
 					<div class="form-group col-md-6">
 						<label for="moeda">Moeda</label>
-						<select class="form-control" id="moeda" type="number" name="moeda" placeholder="valor">
-							<option value="real">Real</option>
-							<option value="Dólar Americano">Dólar Americano</option>
-							<option value="Peso Uruguaio">Peso Uruguaio</option>
-						</select>
+						<select class="form-control" id="moeda" type="number" name="moeda" placeholder="valor" dataset="dsMoedas" datasetkey="simbolo" datasetvalue="nomeMoeda"></select>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="valor">Valor</label>
