--- a/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
+++ b/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
@@ -110,6 +110,12 @@
 						<input type="text" name="estado" id="estado" class="form-control">
 					</div>
 				</div>
+				<div class="row">
+					<div class="form-group col-md-12">
+						<label for="informacoes">Informações Adicionais</label>
+						<textarea class="form-control" label="informacoes" name="informacoes"></textarea>
+					</div>
+				</div>
 			</div>
 		</div>
 
@@ -121,17 +127,11 @@
 				<div class="row">
 					<div class="form-group col-md-6">
 						<label for="moeda">Moeda</label>
-						<select class="form-control" id="moeda" type="number" name="moeda" placeholder="valor" dataset="dsMoedas" datasetkey="simbolo" datasetvalue="nomeMoeda"></select>
+						<select class="form-control" id="moeda" type="number" name="moeda" placeholder="Moeda" dataset="dsFormMoedas" datasetkey="simbolo" datasetvalue="moeda"></select>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="valor">Valor</label>
 						<input class="form-control" id="valor" type="number" name="valor" placeholder="valor">
-					</div>
-				</div>
-				<div class="row">
-					<div class="form-group col-md-12">
-						<label for="informacoes">Informações Adicionais</label>
-						<textarea class="form-control" label="informacoes" name="informacoes"></textarea>
 					</div>
 				</div>
 			</div>
