feat: ajusta form Novo Ponto Comercial para puxar as opções de responsáveis a partir do dataset ResponsaveisXerox

--- a/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
+++ b/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
@@ -153,23 +153,19 @@
 							<td>
 								<input type="zoom" id="responsavel" name="responsavel" 
 									data-zoom="{
-									'displayKey':'colleagueName',
-									'datasetId':'colleague',
+									'displayKey':'nome',
+									'datasetId':'dsResponsaveisXerox',
 									'placeholder':'Escolha o responsável',
 									'fields':[
 										{
-											'field':'colleagueId',
+											'field':'login',
 											'label':'ID'
 										},
 										{
-											'field':'colleagueName',
+											'field':'nome',
 											'label':'Nome',
 											'standart':'true'
-										},
-										{
-											'field':'login',
-											'label':'Login'
-										}	
+										}
 									]
 								}">
 							</td>
