feat: mecanismo de atribuição customizado

--- a/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
+++ b/forms/Novo Ponto Comercial/Novo Ponto Comercial.html
@@ -53,6 +53,14 @@
 			</div>
 			<div class="panel-body">
 				<div class="row">
+					<div class="form-group col-md-2">
+						<label for="pais">País</label>
+						<select name="pais" id="pais" class="form-control">
+							<option value="Brazolia">Brasil</option>
+							<option value="EUA">EUA</option>
+							<option value="URU">Uruguai</option>
+						</select>
+					</div>
 					<div class="from-group col-md-2">
 						<label for="tipoPonto">Tipo do Ponto</label>
 						<div class="radio">
